--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ jobs:
     outputs:
       output_id_number: ${{ steps.step1.outputs.id }}
     steps:
-      - id: 'update_worksheet'
+      - id: 'get_worksheet'
         uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
         with:
           spreadsheetId: ${{secrets.SPREADSHEET_ID}}
@@ -51,10 +51,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: job2
     steps:
-    - id: step1
-      run: |
-        gitid=${{needs.job2.outputs.output_id_number}}
-        echo "$gitid"
+      - id: 'update_worksheet'
+        uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
+        with:
+          spreadsheetId: ${{secrets.SPREADSHEET_ID}}
+          commands: | # list of commands, specified as a valid JSON string
+            [
+              { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": ${{needs.job2.outputs.output_id_number}}, "minRow": 2 }}
+            ]
+        env:
+          GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
+          GSHEET_PRIVATE_KEY: ${{ secrets.SERVICE_KEY }}
+      - id: dump
+        run: |
+          gitid=${{needs.job2.outputs.output_id_number}}
+          echo "$gitid"
 
 #       - uses: actions/checkout@v1
 #       - name: Extract info
