--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,10 +7,15 @@ jobs:
     # Map a step output to a job output
     outputs:
       output_id: ${{ steps.step1.outputs.id }}
+      output_result: ${{ steps.step1.outputs.res }}
     steps:
       - uses: actions/checkout@v1
       - id: step1
-        run: echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
+        run: |
+          re=$(python3 checker.py)
+          echo "$re"
+          echo "::set-output name=res::$re"
+          echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
   job2:
     runs-on: ubuntu-latest
     needs: job1
