--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,7 @@ jobs:
           re='0' 
           echo "$re"
           echo $(ls)
+          echo $(python3 checker.py)
           echo "::set-output name=res::$re"
           echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
   job2:
