--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,10 +12,9 @@ jobs:
       - uses: actions/checkout@v1
       - id: step1
         run: |
-          re='0' 
+          cd seminar02
+          re=$(python3 checker.py)
           echo "$re"
-          echo $(ls)
-          echo $(python3 checker.py)
           echo "::set-output name=res::$re"
           echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
   job2:
@@ -51,7 +50,7 @@ jobs:
             if [ "$t" = "$gitid" ]; then
               echo "FOUND"
               echo "$i"
-              j="[{ \"command\": \"updateData\", \"args\": {\"worksheetTitle\": \"generetedSheet\", \"data\": [[\"yes\"]], \"minCol\": 2, \"minRow\": $((i+1)) }} ]"
+              j="[{ \"command\": \"updateData\", \"args\": {\"worksheetTitle\": \"generetedSheet\", \"data\": [[\"${{needs.job1.outputs.output_result}}\"]], \"minCol\": 2, \"minRow\": $((i+1)) }} ]"
               echo "$j"
               echo "::set-output name=id::$j"
             else
